@@ -2,7 +2,8 @@
  * #394: Compact repository segments and free space with new "borgmatic compact" action. Borg 1.2+
    only. Also run "compact" by default when no actions are specified, as "prune" in Borg 1.2 no
    longer frees up space unless "compact" is run.
- * #394: When the "atime" option is used, tailor the flags passed to Borg depending on version.
+ * #394: When using the "atime" or "bsd_flags" options, tailor the flags passed to Borg depending on
+   the Borg version.
  * #480, #482: Fix traceback when a YAML validation error occurs.
 
 1.5.22
